wrapped items fixed

--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ header {
     display: block;
     color: white;
     padding: 10px;
-    text-align: ;
+    text-align: start;
     text-decoration: none;
     font-size: 0.780em;
     color: rgb(166, 44, 44);
